--- a/plugins/utils/languages/base-lang.json
+++ b/plugins/utils/languages/base-lang.json
@@ -1,7 +1,7 @@
 {
     "spanish": {
         "version": "La version del Bot es $1",
-        "about": "Soy **$1** un bot multi-plataforma creado por $2 para el servidor Space Showdown, puedes ver mi codigo en $3",
+        "about": "Soy **$1** un bot multi-plataforma creado por $2, puedes ver mi codigo en $3",
         "errorlog": {
             "link": "Puedes ver el log de errores aqui $1",
             "error": "Lo sentimos, no pudimos encontrar el enlace"
