--- a/plugins/utils/languages/base-lang.json
+++ b/plugins/utils/languages/base-lang.json
@@ -1,5 +1,6 @@
 {
     "spanish": {
+        "test": "Prueba",
         "version": "La version del Bot es $1",
         "about": "Soy **$1** un bot multi-plataforma creado por $2, puedes ver mi codigo en $3",
         "errorlog": {
@@ -18,6 +19,7 @@
         
     },
     "english": {
+        "test": "Test",
         "version": "The Bot's version is $1",
         "about": "Hello I'm $1 a cross-plataform created by $2, you can see my code at $3",
         "errorlog": {
