basic discordCommands n psCommands => commands :balloon:

--- a/plugins/utils/languages/base-lang.json
+++ b/plugins/utils/languages/base-lang.json
@@ -2,7 +2,9 @@
     "spanish": {
         "test": "Prueba",
         "version": "La version del Bot es $1",
+        "bout_me": "Acerca de mi...",
         "about": "Soy **$1** un bot multi-plataforma creado por $2, puedes ver mi codigo en $3",
+        "about_cord": "Soy **1** un bot multi-plataforma creado por $2",
         "errorlog": {
             "link": "Puedes ver el log de errores aqui $1",
             "error": "Lo sentimos, no pudimos encontrar el enlace"
@@ -21,7 +23,9 @@
     "english": {
         "test": "Test",
         "version": "The Bot's version is $1",
+        "bout_me": "About me...",
         "about": "Hello I'm $1 a cross-plataform created by $2, you can see my code at $3",
+        "about_cord": "Hello I'm $1 a cross-plataform created by $2",
         "errorlog": {
             "link": "Here is your errorlog $1",
             "error": "Sorry... we couldn't get the error log"
