:arrow_up: Some changes :balloon:
Games: Implement Language system and fix that users can use mention to set a new holder
Languages: Remove default files and make LoadHelp

--- a/plugins/utils/languages/package.json
+++ b/plugins/utils/languages/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "Language System",
-    "version": "2.0.2",
+    "name": "language-system",
+    "version": "2.0.4",
     "main": "index.js",
     "author": {
         "name": "Aldair Beltran",
